Bug 163782 - minicom looks bad in konsole
Summary: minicom looks bad in konsole
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-11 13:35 UTC by Pavel Volkovitskiy
Modified: 2008-06-12 01:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
minicom in konsole4 (68.20 KB, image/jpeg)
2008-06-11 13:36 UTC, Pavel Volkovitskiy
Details
konsole after minicom in kde 4.0.4 (150.80 KB, image/jpeg)
2008-06-11 13:38 UTC, Pavel Volkovitskiy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Volkovitskiy 2008-06-11 13:35:43 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

minicom uses only half of konsolw width and wrapped

that's for kde4.0.x and latest trunk
Comment 1 Pavel Volkovitskiy 2008-06-11 13:36:21 UTC
Created attachment 25265 [details]
minicom in konsole4
Comment 2 Pavel Volkovitskiy 2008-06-11 13:38:33 UTC
Created attachment 25266 [details]
konsole after minicom in kde 4.0.4
Comment 3 Robert Knight 2008-06-11 19:21:21 UTC
SVN commit 819652 by knight:

Update pty window size when the image size is changed via escape codes
from the terminal.

CCBUG: 163782


 M  +6 -6      Session.cpp  
 M  +1 -1      Session.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=819652
Comment 4 Robert Knight 2008-06-11 20:46:32 UTC
Commit 819652 fixes the minicom output being wrapped.  The display is still being sized to 80 columns on startup, which remains after exiting minicom.
Comment 5 Robert Knight 2008-06-12 01:44:31 UTC
SVN commit 819755 by knight:

* Add support for 'Allow 132 columns' mode (set with \E?40h , reset with \E?40l)
which controls whether selecting 80/132 column mode with DECCOLM (\E?3h,\E?3l)
has any effect.  Defaults to disabled as in xterm.

* Avoid triggering a terminal size update if the new and current terminal
image sizes are the same.

BUG: 163782


 M  +9 -1      Emulation.cpp  
 M  +30 -8     Vt102Emulation.cpp  
 M  +16 -10    Vt102Emulation.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=819755