* Add support for 'Allow 132 columns' mode (set with \E?40h , reset with \E?40l) which controls whether selecting 80/132 column mode with DECCOLM (\E?3h,\E?3l) has any effect.  Defaults to disabled as in xterm.

* Avoid triggering a terminal size update if the new and current terminal
image sizes are the same.

BUG: 163782

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=819755